--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+:root{
+    --bg-primary-color: #fff;
+    --bg-secundary-color: #f5f5f5;
+    --bg-tertiary-color:#000;
+
+    --bt-primary-color: #8f0101;
+    --bt-secundary-color: #b81515;
+
+    --tx-primary-color: #222;
+    --tx-secundary-color: #fff;
+    
+}
 *{
     margin: 0;
     padding: 0;
