--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-
-:root {
-  --primary-color: #8f0101;
-  --secundary-color: #b81515;
-
-  --bg-primary-color: #fff;
-  --bg-secundary-color: #f5f5f5;
-  --bg-tertiary-color: #000;
-
-  --tx-primary-color: #222;
-  --tx-secundary-color: #fff;
-
-  --title-weigth: 700;
-  --text-weight: 400;
-  --menu-text-weight: 500;
-
-  --font-project: "Montserrat", sans-serif;
-}
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-}
+@import url(global.css);
+@import url(header.css);
