--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,17 @@
 header {
-  width: 100%;
-  height: 138px;
   background-color: var(--bg-tertiary-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 38px 48px;
 }
 header a img {
   width: 68px;
   height: 64px;
-  margin: 37px 0 0 48px;
+}
+.navigation-menu {
+  margin-top: 24px;
+}
+nav {
+  display: none;
 }
